@@ -19,6 +19,7 @@
 
 package com.epam.grid.engine.service;
 
+import com.epam.grid.engine.TestPropertiesWithSgeEngine;
 import com.epam.grid.engine.entity.JobFilter;
 import com.epam.grid.engine.entity.Listing;
 import com.epam.grid.engine.entity.job.DeleteJobFilter;
@@ -26,113 +27,125 @@ import com.epam.grid.engine.entity.job.JobState;
 import com.epam.grid.engine.entity.job.DeletedJobInfo;
 import com.epam.grid.engine.entity.job.Job;
 import com.epam.grid.engine.entity.job.JobOptions;
-import com.epam.grid.engine.provider.job.sge.SgeJobProvider;
+import com.epam.grid.engine.exception.GridEngineException;
+import com.epam.grid.engine.provider.job.JobProvider;
+import com.epam.grid.engine.provider.log.JobLogProvider;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.NullAndEmptySource;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.SpyBean;
+import org.springframework.boot.test.mock.mockito.MockBean;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.times;
+import static com.epam.grid.engine.provider.utils.sge.TestSgeConstants.EMPTY_STRING;
 
-@SpringBootTest(properties = {"grid.engine.type=SGE"})
+@SpringBootTest
+@TestPropertiesWithSgeEngine
 public class JobOperationProviderServiceTest {
 
+    private static final long SOME_JOB_ID = 7L;
+    private static final long SOME_WRONG_JOB_ID = 0L;
     private static final String SGEUSER = "sgeuser";
-    private static final String STDIN = "STDIN";
+    private static final String SOME_JOB_NAME = "someName";
+    private static final String SOME_COMMAND = "simple.sh";
     private static final String QNAME = "main@c242f10e1253";
     private static final String DATE = "1986-04-08T12:30:00";
-    private static final String STATE = "running";
-    private static final String STATE_CODE = "r";
+    private static final String PENDING_STATE = "pending";
+    private static final String SOME_JOB_LOG_DIRECTORY_PATH = "/mnt/logs";
 
     @Autowired
-    JobOperationProviderService jobOperationProviderService;
+    private JobOperationProviderService jobOperationProviderService;
 
-    @SpyBean
-    SgeJobProvider jobProvider;
+    @MockBean
+    private JobProvider jobProvider;
 
-    @Test
-    public void shouldReturnCorrectInfoDuringDeletion() {
-        final DeleteJobFilter deleteJobFilter = DeleteJobFilter.builder()
-                .force(false)
-                .id(1L)
-                .user(SGEUSER)
-                .build();
-        final DeletedJobInfo expectedDeletedJobInfo = DeletedJobInfo.builder()
-                .id(List.of(1L))
-                .user(SGEUSER)
-                .build();
-        doReturn(expectedDeletedJobInfo).when(jobProvider).deleteJob(deleteJobFilter);
+    @MockBean
+    private JobLogProvider jobLogProvider;
+
+    @ParameterizedTest
+    @MethodSource("provideValidRequestsForDeleting")
+    public void shouldReturnCorrectInfoDuringDeletion(final List<Long> ids, final String user) {
+        final DeleteJobFilter deleteJobFilter = new DeleteJobFilter(false, ids, user);
+        final Listing<DeletedJobInfo> expectedDeletedJobInfo =
+                new Listing<>(List.of(new DeletedJobInfo(SOME_JOB_ID, SGEUSER)));
+        Mockito.doReturn(expectedDeletedJobInfo).when(jobProvider).deleteJob(deleteJobFilter);
         Assertions.assertEquals(expectedDeletedJobInfo, jobOperationProviderService.deleteJob(deleteJobFilter));
-        Mockito.verify(jobProvider, times(1)).deleteJob(deleteJobFilter);
+    }
+
+    static Stream<Arguments> provideValidRequestsForDeleting() {
+        return Stream.of(
+                Arguments.of(null, SGEUSER),
+                Arguments.of(List.of(), SGEUSER),
+                Arguments.of(List.of(SOME_JOB_ID), null),
+                Arguments.of(List.of(SOME_JOB_ID), EMPTY_STRING)
+        );
     }
 
     @Test
     public void shouldReturnCorrectResponse() {
-        final Listing<Job> jobListing = listingParser(listParser());
-        final JobFilter jobFilter = new JobFilter();
-        jobFilter.setIds(Collections.singletonList(7));
+        final Listing<Job> jobListing = new Listing<>(List.of(getPendingJob()));
+        final JobFilter jobFilter = JobFilter.builder().ids(List.of(SOME_JOB_ID)).build();
 
-        doReturn(jobListing).when(jobProvider).filterJobs(jobFilter);
+        Mockito.doReturn(jobListing).when(jobProvider).filterJobs(jobFilter);
         Assertions.assertEquals(jobListing, jobOperationProviderService.filter(jobFilter));
-        Mockito.verify(jobProvider, times(1)).filterJobs(jobFilter);
+    }
+
+    @ParameterizedTest
+    @MethodSource("provideWrongDeleteRequests")
+    public void shouldThrowsExceptionDuringDeletionWhenWrongRequest(final List<Long> ids, final String user) {
+        final DeleteJobFilter deleteJobFilter = new DeleteJobFilter(false, ids, user);
+        Assertions.assertThrows(GridEngineException.class,
+                () -> jobOperationProviderService.deleteJob(deleteJobFilter));
+    }
+
+    static Stream<Arguments> provideWrongDeleteRequests() {
+        return Stream.of(
+                Arguments.of(null, null),
+                Arguments.of(null, EMPTY_STRING),
+                Arguments.of(List.of(SOME_JOB_ID), SGEUSER),
+                Arguments.of(List.of(SOME_WRONG_JOB_ID), null)
+        );
+    }
+
+    @ParameterizedTest
+    @NullAndEmptySource
+    public void shouldThrowWhenNoCommandPassedToSubmit(final String command) {
+        final JobOptions jobOptions = JobOptions.builder()
+                .command(command)
+                .build();
+        Assertions.assertThrows(GridEngineException.class, () -> jobOperationProviderService.runJob(jobOptions));
     }
 
     @Test
     public void shouldReturnCorrectJobRun() {
-        final JobOptions options = new JobOptions();
-        final Job resultJob = listParser().get(0);
+        final JobOptions options = JobOptions.builder().command(SOME_COMMAND).build();
+        final Job resultJob = getPendingJob();
 
-        doReturn(resultJob).when(jobProvider).runJob(options);
+        Mockito.doReturn(SOME_JOB_LOG_DIRECTORY_PATH).when(jobLogProvider).getJobLogDir();
+        Mockito.doReturn(resultJob).when(jobProvider).runJob(options, SOME_JOB_LOG_DIRECTORY_PATH);
         Assertions.assertEquals(resultJob, jobOperationProviderService.runJob(options));
-        Mockito.verify(jobProvider, times(1)).runJob(options);
     }
 
-    private static List<Job> listParser() {
-        return Collections.singletonList(Job.builder()
-                .id(7)
-                .priority(0.55500)
-                .name(STDIN)
+    private static Job getPendingJob() {
+        return Job.builder()
+                .id(SOME_JOB_ID)
+                .name(SOME_JOB_NAME)
                 .owner(SGEUSER)
-                .state(stateParser())
-                .queueName(QNAME)
-                .submissionTime(dateParser())
-                .build());
-    }
-
-    private static Listing<Job> listingParser(final List<Job> sgeJobs) {
-        return new Listing<>(sgeJobs.stream()
-                .map(sgeJob -> Job.builder()
-                        .id(sgeJob.getId())
-                        .priority(sgeJob.getPriority())
-                        .name(sgeJob.getName())
-                        .owner(sgeJob.getOwner())
-                        .state(sgeJob.getState())
-                        .submissionTime(sgeJob.getSubmissionTime())
-                        .queueName(sgeJob.getQueueName())
-                        .slots(sgeJob.getSlots())
+                .state(JobState.builder()
+                        .category(JobState.Category.PENDING)
+                        .state(PENDING_STATE)
                         .build())
-                .collect(Collectors.toList()));
-    }
-
-    private static JobState stateParser() {
-        final JobState jobState = new JobState();
-        jobState.setCategory(JobState.Category.RUNNING);
-        jobState.setState(STATE);
-        jobState.setStateCode(STATE_CODE);
-        return jobState;
-    }
-
-    private static LocalDateTime dateParser() {
-        final DateTimeFormatter formatter = DateTimeFormatter.ISO_DATE_TIME;
-        return LocalDateTime.parse(DATE, formatter);
+                .queueName(QNAME)
+                .submissionTime(LocalDateTime.parse(DATE, DateTimeFormatter.ISO_DATE_TIME))
+                .build();
     }
 }
